--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -2,13 +2,16 @@
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-        <span class="fs-4">Introduction to Python using Flask and Sqlite</span>
+        <span class="fs-4">Introduction to Python <br>using Flask and Sqlite</span>
     </a>
 
     <ul class="nav nav-pills">
         <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
         <li class="nav-item"><a href="/articles" class="nav-link">Articles</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+        <li class="nav-item"><a href="/register" class="nav-link active" aria-current="page">Register</a></li>
     </ul>
     </header>
 </div>
