--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,17 +1,25 @@
 <div class="container">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+    <header class="d-flex flex-wrap justify-content-between align-items-center py-3 mb-4 border-bottom ">
+    <div>
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none ">
         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
         <span class="fs-4">Introduction to Python <br>using Flask and Sqlite</span>
-    </a>
+        </a>
+    </div>
 
-    <ul class="nav nav-pills">
-        <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
+    <div> 
+    <ul class="nav nav-pills ">
+        <li class="nav-item"><a href="/" class="nav-link " aria-current="page">Home</a></li>
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
         <li class="nav-item"><a href="/articles" class="nav-link">Articles</a></li>
     </ul>
-    <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item"><a href="/register" class="nav-link active" aria-current="page">Register</a></li>
+    </div
+    
+    <div>
+    <ul class="nav nav nav-pills navbar-right ">
+        <li class="nav-item"><a href="/register" class="nav-link " aria-current="page">Register</a></li>
+        <li class="nav-item"><a href="/login" class="nav-link " aria-current="page">Login</a></li>
     </ul>
+    </div>
     </header>
 </div>
