--- a/templates/articles.html
+++ b/templates/articles.html
@@ -5,7 +5,7 @@
         <h1>Articles</h1>
         <ul class="list-group">
             {% for article in articles %}
-                <li class="list-group-item"> <a href="article/{{article.id}}">{{article.title}}</a></li>
+                <li class="list-group-item "> <a class="text-decoration-none" href="article/{{article.id}}">{{article.title}}</a></li>
             {% endfor %}
         </ul>
 
