--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -16,9 +16,13 @@
     </div
     
     <div>
-    <ul class="nav nav nav-pills navbar-right ">
+    <ul class="nav nav-pills navbar-right ">
+        {% if session.logged_in %}
+        <li class="nav-item"><a href="/logout" class="nav-link " aria-current="page">Logout</a></li>
+        {% else %}
         <li class="nav-item"><a href="/register" class="nav-link " aria-current="page">Register</a></li>
         <li class="nav-item"><a href="/login" class="nav-link " aria-current="page">Login</a></li>
+        {%endif%}
     </ul>
     </div>
     </header>
